--- a/Yapbam/build.xml
+++ b/Yapbam/build.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project default="build" name="Create Runnable Jar for Yapbam project">
 	<!--======================================  README ================================================>
+	|WARNING : THIS BUILD FILE IS DEPRECATED, PLEASE USE Maven pom.xml instead.                        |
 	| if you want to run this build file, you have to set the following commonsnetpath, commonpath and |
 	| jfreechartpath, etc ... properties in the customPaths.properties file used in the line below.    |
 	| These properties have to reference the apache commonsnet, jfreeChart, JCommon, OpenCSV, A-JLib,  |
