--- a/Yapbam/pom.xml
+++ b/Yapbam/pom.xml
@@ -6,6 +6,7 @@
 	<version>0.18.2</version>
 	<properties>
 		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
+		<mainClass>net.yapbam.gui.Launcher</mainClass>
     </properties>
 
 	<build>
@@ -99,6 +100,7 @@
 						</goals>
 						<configuration>
 							<minimizeJar>true</minimizeJar>
+							<finalName>program</finalName>
 							<filters>
 								<filter>
 									<!-- Remove signatures and other useless stuff -->
@@ -106,7 +108,15 @@
 									<excludes>
 										<exclude>license/**</exclude>
 										<exclude>META-INF/**</exclude>
+										<exclude>mozilla/**</exclude>
 									</excludes>
+								</filter>
+								<filter>
+									<!-- include Launcher -->
+									<artifact>com.fathzer:yapbam-launcher</artifact>
+									<includes>
+										<include>**</include>
+									</includes>
 								</filter>
 								<filter>
 									<!-- Remove itext (think it is never used) -->
@@ -135,18 +145,27 @@
 										<include>**</include>
 									</includes>
 								</filter>
-								<!-- filter> <artifact>org.jfree:jfreechart</artifact> <includes> 
-									<include>**/*.properties</include> </includes> </filter -->
+								<filter>
+									<artifact>commons-codec:commons-codec</artifact>
+									<excludes>
+										<exclude>org/apache/commons/codec/language/**</exclude>
+									</excludes>
+								</filter>
+								<filter>
+									<artifact>org.slf4j:slf4j-simple</artifact>
+									<excludes>
+										<exclude>**</exclude>
+									</excludes>
+								</filter>
 							</filters>
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
-										<Main-Class>net.yapbam.gui.MainFrame</Main-Class>
+										<Main-Class>${mainClass}</Main-Class>
 										<SplashScreen-Image>net/yapbam/gui/images/splash.png</SplashScreen-Image>
 										<Permissions>all-permissions</Permissions>
 										<Application-Name>Yapbam</Application-Name>
-										<Entry-Point>net.yapbam.gui.MainFrame</Entry-Point>
 										<Trusted-Only>true</Trusted-Only>
 									</manifestEntries>
 								</transformer>
@@ -180,6 +199,40 @@
 					<alias>fathzer</alias>
 				</configuration>
 			</plugin-->
+			<plugin>
+			  <artifactId>maven-assembly-plugin</artifactId>
+			  <version>2.5.4</version>
+			  <configuration>
+			    <descriptors>
+			      <descriptor>assembly.xml</descriptor>
+			    </descriptors>
+			  	<appendAssemblyId>false</appendAssemblyId>
+ 				<outputDirectory>${basedir}</outputDirectory>
+			  </configuration>
+			  <executions>
+			    <execution>
+			      <id>make-assembly</id> <!-- this is used for inheritance merges -->
+			      <phase>package</phase> <!-- append to the packaging phase. -->
+			      <goals>
+			        <goal>single</goal> <!-- goals == mojos -->
+			      </goals>
+			    </execution>
+			  </executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -245,6 +298,11 @@
 			<groupId>com.fathzer</groupId>
 			<artifactId>jclop</artifactId>
 			<version>0.0.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fathzer</groupId>
+			<artifactId>yapbam-launcher</artifactId>
+			<version>1.0.1</version>
 		</dependency>
 	</dependencies>
 </project>
