--- a/Yapbam/pom.xml
+++ b/Yapbam/pom.xml
@@ -12,6 +12,11 @@
 	<build>
 		<pluginManagement>
 		    <plugins>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>sonar-maven-plugin</artifactId>
+					<version>2.3</version>
+				</plugin>
 		        <plugin>
 		            <groupId>org.eclipse.m2e</groupId>
 		            <artifactId>lifecycle-mapping</artifactId>
