--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -27,6 +27,7 @@ MainFrame.ShowSubtransactions.None=None
 MainFrame.ShowSubtransactions.ToolTip=Use this menu to show or hide all subtransactions
 MainFrame.showColumns=Display columns...
 MainFrame.showColumns.ToolTip=Use this menu to show or hide columns
+MainFrame.stat.summary=Number of expenses\: {0}, Number of receipts\: {1}, Balance\: {2}
 
 MainMenu.File=File
 MainMenu.File.Mnemonic=F
@@ -1299,4 +1300,5 @@ messages.open.tooltip=Some messages are available, click this button to display 
 messages.showReadMessages=Show read messages ({0}/{1})
 messages.title=Messages
 messagesnoMessageAvailable=No unread message available
+
 
