--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -27,6 +27,8 @@ MainFrame.ShowSubtransactions.None=None
 MainFrame.ShowSubtransactions.ToolTip=Use this menu to show or hide all subtransactions
 MainFrame.showColumns=Display columns...
 MainFrame.showColumns.ToolTip=Use this menu to show or hide columns
+MainFrame.stat.hide.tip=Click here to hide details
+MainFrame.stat.show.tip=Click here to get more details
 MainFrame.stat.summary=Number of expenses\: {0}, Number of receipts\: {1}, Balance\: {2}
 
 MainMenu.File=File
