--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -428,6 +428,8 @@ PeriodicalTransactionManager.new.toolTip=Opens a dialog to create a periodical t
 PeriodicalTransactionManager.delete.toolTip=Deletes the selected periodical transaction
 PeriodicalTransactionManager.edit.toolTip=Opens a dialog to edit the selected periodical transaction
 PeriodicalTransactionManager.duplicate.toolTip=Duplicates the selected periodical transaction and edits the duplicate
+PeriodicalTransactionManager.ignoreFilter=Ignore filter
+PeriodicalTransactionManager.ignoreFilter.tooltip=Check this box to filter the transactions table
 
 AccountManager.balanceColumn.title=Initial balance
 AccountManager.deleteAccount.toolTip=Deletes the selected account
