--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -420,6 +420,14 @@ PeriodicalTransactionManager.title=Periodical transactions management
 PeriodicalTransactionManager.toolTip=This tab allows you to manage periodical transactions
 PeriodicalTransactionManager.active.column=Active
 PeriodicalTransactionManager.nextDate.column=Next
+PeriodicalTransactionManager.nextMonth=during next month
+PeriodicalTransactionManager.nextQuarter=during next quarter
+PeriodicalTransactionManager.nextYear=during next year
+PeriodicalTransactionManager.settings.nextMonth=Next month
+PeriodicalTransactionManager.settings.nextQuarter=Next quarter
+PeriodicalTransactionManager.settings.nextYear=Next year
+PeriodicalTransactionManager.settings.title=Settings
+PeriodicalTransactionManager.summary={1} transactions {0}. Total expenses\: {2}. Total receipts\: {3}. Balance\: {4}
 PeriodicalTransactionManager.period.column=Every
 PeriodicalTransactionManager.period.daily.content={0,number} days
 PeriodicalTransactionManager.period.monthly.content={0,number} months the {1,number}
@@ -429,7 +437,7 @@ PeriodicalTransactionManager.delete.toolTip=Deletes the selected periodical tran
 PeriodicalTransactionManager.edit.toolTip=Opens a dialog to edit the selected periodical transaction
 PeriodicalTransactionManager.duplicate.toolTip=Duplicates the selected periodical transaction and edits the duplicate
 PeriodicalTransactionManager.ignoreFilter=Ignore filter
-PeriodicalTransactionManager.ignoreFilter.tooltip=Check this box to filter the transactions table
+PeriodicalTransactionManager.ignoreFilter.tooltip=Check this box to not filter the transactions table
 
 AccountManager.balanceColumn.title=Initial balance
 AccountManager.deleteAccount.toolTip=Deletes the selected account
@@ -1304,5 +1312,7 @@ messages.open.tooltip=Some messages are available, click this button to display 
 messages.showReadMessages=Show read messages ({0}/{1})
 messages.title=Messages
 messagesnoMessageAvailable=No unread message available
+
+
 
 
