--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1313,6 +1313,17 @@ messages.showReadMessages=Show read messages ({0}/{1})
 messages.title=Messages
 messagesnoMessageAvailable=No unread message available
 
-
-
-
+LinkEditor.button.tooltip=Click this button to add or edit link
+LinkEditor.button.tooltip.disabled=This button is is disabled because you're not currently editing comment field
+LinkEditor.dialog.title=Edit link
+LinkEditor.file=File
+LinkEditor.file.tooltip=Click this button to select a file as link destination
+LinkEditor.incorrectURL=This button is disabled because the URL is not correct
+LinkEditor.incorrectURL=This button is disabled because the URL is not correct
+LinkEditor.test=Test
+LinkEditor.test.tooltip=Click this button to test the link
+LinkEditor.text=Text:
+LinkEditor.text.tooltip=Enter the link's text in this field
+LinkEditor.textIsEmpty=This button is disabled because the text is empty
+LinkEditor.url=Url:
+LinkEditor.url.tooltip=Enter the destination URL in this field
