--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1314,11 +1314,10 @@ messages.title=Messages
 messagesnoMessageAvailable=No unread message available
 
 LinkEditor.button.tooltip=Click this button to add or edit link
-LinkEditor.button.tooltip.disabled=This button is is disabled because you're not currently editing comment field
+LinkEditor.button.tooltip.disabled=This button is disabled because you're not currently editing the comment field
 LinkEditor.dialog.title=Edit link
 LinkEditor.file=File
 LinkEditor.file.tooltip=Click this button to select a file as link destination
-LinkEditor.incorrectURL=This button is disabled because the URL is not correct
 LinkEditor.incorrectURL=This button is disabled because the URL is not correct
 LinkEditor.test=Test
 LinkEditor.test.tooltip=Click this button to test the link
