--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -775,7 +775,7 @@ Update.DownloadFailed.retry=Retry
 #This message is displayed during the second part of the update process.
 Update.Install.title=Installing ...
 Update.Install.message=Please wait, Yapbam is installing an update.
-Update.Install.failure=<html>Sorry, an unexpected error has occurred.<br>Your Yapbam copy may be corrupted.<br>We strongly recommend you to reinstall Yapbam from the official download site \: http\://www.yapbam.net</html>
+Update.Install.failure=<html>Sorry, an unexpected error has occurred.<br>Your Yapbam copy may be corrupted.<br>We strongly recommend you to reinstall Yapbam from the official download site \: https\://www.yapbam.net</html>
 Update.Install.success=Yapbam has been successfully updated
 #-------- end of the update part --------
 
@@ -935,7 +935,7 @@ Tip.9=<html>Yapbam can display a summary of relative balances.<hr style\="width\
 ImportDialog.error.emptyFile=The imported file is empty
 ImportDialog.error.exception=An error ({0}) occurred while reading the imported file
 
-MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Your version\: <B>{0}</B><BR>Latest version\: <B>{1}</B><BR><BR>Release notes are available on <b>http\://www.yapbam.net</b><BR><BR>What would you like to do?</BODY></HTML>
+MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Your version\: <B>{0}</B><BR>Latest version\: <B>{1}</B><BR><BR>Release notes are available on <b>https\://www.yapbam.net</b><BR><BR>What would you like to do?</BODY></HTML>
 openDialog.fileDoesntExist=The selected file does not exist
 openDialog.targetDoesntExist=The target of the selected shortcut does not exist.
 
@@ -953,8 +953,8 @@ MainFrame.LastNotFound=The last opened file ({0}) does not exist anymore
 
 #---------------------------------
 # New dialogs when an update is available but can't be installed (Yapbam installation directory is write protected).
-MainMenu.CheckUpdate.Success.systemProtected=<html>Your version\: <B>{0}</B><BR>Latest version\: <B>{1}</B><BR><BR>Yapbam cannot update itself because its installation directory is protected by the system (maybe windows UAC?)<br><br>You will have to install this update manually using the installer.<br><br>The installer and the release notes are available at <a href\="http\://www.yapbam.net">http\://www.yapbam.net</a></html>
-MainMenu.CheckUpdate.Success.writeProtected=<html>Your version\: <B>{0}</B><BR>Latest version\: <B>{1}</B><BR><BR>Yapbam cannot update itself because its installation directory is write protected.<br><br>The new version and its release notes are available at <a href\="http\://www.yapbam.net">http\://www.yapbam.net</a></html>
+MainMenu.CheckUpdate.Success.systemProtected=<html>Your version\: <B>{0}</B><BR>Latest version\: <B>{1}</B><BR><BR>Yapbam cannot update itself because its installation directory is protected by the system (maybe windows UAC?)<br><br>You will have to install this update manually using the installer.<br><br>The installer and the release notes are available at <a href\="https\://www.yapbam.net">https\://www.yapbam.net</a></html>
+MainMenu.CheckUpdate.Success.writeProtected=<html>Your version\: <B>{0}</B><BR>Latest version\: <B>{1}</B><BR><BR>Yapbam cannot update itself because its installation directory is write protected.<br><br>The new version and its release notes are available at <a href\="https\://www.yapbam.net">https\://www.yapbam.net</a></html>
 MainMenu.CheckUpdate.Success.openSite=Open Yapbam's web site
 
 #----------------------------------
@@ -1075,7 +1075,7 @@ Subcategories.separatorField.tooltip=<html>You can define sub-categories by sepa
 #Persistence is achieve by plugins, the following error message is send when a plugin is not found
 persitencePlugin.load.error=Unable to load the persistence plugin {0}.
 #A tip (in the welcome screen) that presents the Cloud functionnality
-Tip.10=<html>Access your data from any computer.<hr style\="width\:40%">In save dialog, the <b>Dropbox</b> tab allows you to save data to your Dropbox account and then access it from any computer connected to the Internet.<br><br>To do this, you will need just a Dropbox account available here\: <a href\="http\://www.dropbox.com">http\://www.dropbox.com</a></html>
+Tip.10=<html>Access your data from any computer.<hr style\="width\:40%">In save dialog, the <b>Dropbox</b> tab allows you to save data to your Dropbox account and then access it from any computer connected to the Internet.<br><br>To do this, you will need just a Dropbox account available here\: <a href\="https\://www.dropbox.com">https\://www.dropbox.com</a></html>
 
 #Wordings related to general synchronization process
 synchronization.synchronizing=Synchronizing ...
@@ -1314,15 +1314,16 @@ messages.title=Messages
 messagesnoMessageAvailable=No unread message available
 
 LinkEditor.button.tooltip=Click this button to add or edit link
-LinkEditor.button.tooltip.disabled=This button is disabled because you're not currently editing the comment field
+LinkEditor.button.tooltip.disabled=This button is is disabled because you're not currently editing comment field
 LinkEditor.dialog.title=Edit link
 LinkEditor.file=File
 LinkEditor.file.tooltip=Click this button to select a file as link destination
 LinkEditor.incorrectURL=This button is disabled because the URL is not correct
 LinkEditor.test=Test
 LinkEditor.test.tooltip=Click this button to test the link
-LinkEditor.text=Text:
+LinkEditor.text=Text\:
 LinkEditor.text.tooltip=Enter the link's text in this field
 LinkEditor.textIsEmpty=This button is disabled because the text is empty
-LinkEditor.url=Url:
+LinkEditor.url=Url\:
 LinkEditor.url.tooltip=Enter the destination URL in this field
+
