--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -1327,3 +1327,4 @@ LinkEditor.textIsEmpty=This button is disabled because the text is empty
 LinkEditor.url=Url\:
 LinkEditor.url.tooltip=Enter the destination URL in this field
 
+generic.recommended.with.parenthesis=(recommended)
