--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1252,16 +1252,18 @@ Generic.unselectAll=Unselect all
 
 #A tool to archive old transactions in a separate file
 Archive.menu.name=Archive
-Archive.restore.title.name=Restore
+Archive.restore.title=Restore
+Archive.restore.tooltip=Select this option to restore some transactions from archive file to current data file.
+Archive.archive.tooltip=Select this option to archive transactions.
 Archive.menu.tooltip=Archives old statements to an archive file
 Archive.selectionDialog.title=Choose the archive file or create a new one
-Archive.statementSelection.helpMessage=<html>Please select the statements you want to archive.<br><br>Click on cell in the "{0}" column to display the statement list.<br>The selected statement and all preceding statements will be archived.</html>
-Archive.statementSelection.restoreHelpMessage=<html>Please select the statements you want to restore.<br><br>Click on cell in the "{0}" column to display the statement list.<br>The selected statement and all following statements will be restored.</html>
+Archive.statementSelection.helpMessage=<html>Please select the statements you want to archive.<br><br>Click on cell in the "{0} " column to display the statement list.<br>The selected statement and all preceding statements will be archived.</html>
+Archive.statementSelection.restoreHelpMessage=<html>Please select the statements you want to restore.<br><br>Click on cell in the "{0}" column to display the statement list.<br>The selected statement and following statements will be restored.</html>
 Archive.statementSelection.ignored.title=Ignored
 Archive.statementSelection.nothingSelected=There is no statement in this account
 Archive.statementSelection.noTransactionSelected=No transaction selected
 Archive.statementSelection.until.title=Until statement
-Archive.statementSelection.to.title=From statement
+Archive.statementSelection.from.title=From statement
 Archive.accountBalancesNotMatch=The initial balance of <b>"{0}"</b> account ({1}) is not equals to the final balance of this account in the archive ({2}).
 Archive.accountBalancesNotMatchFinalMessage=Do you want to continue anyway?
 Archive.report={0} transactions have been successfully archived.
@@ -1332,3 +1334,5 @@ LinkEditor.url=Url\:
 LinkEditor.url.tooltip=Enter the destination URL in this field
 
 generic.recommended.with.parenthesis=(recommended)
+
+
