--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -486,6 +486,8 @@ StatisticsPlugin.bar.receipt=Receipts
 StatisticsPlugin.bar.tabname=Receipts/expenses
 StatisticsPlugin.bar.title=Category-wise receipts and expenses
 StatisticsPlugin.bar.tooltip=This chart shows category-wise expense and receipt amounts
+StatisticsPlugin.bar.netValues.title=Show balances
+StatisticsPlugin.bar.netValues.tooltip=Check this box to display differences between receipts and expenses
 StatisticsPlugin.pie.tabname=Net expenses
 StatisticsPlugin.pie.tooltip=This chart shows category-wise distribution of net expenses (expenses - receipts)
 StatisticsPlugin.pie.byCategory.empty=No category has more expenses than receipts
@@ -815,7 +817,7 @@ Tip.2=<html>You can define alert thresholds for each account.<hr style\="width\:
 Tip.3=<html>Your periodical transactions can be generated automatically.<hr style\="width\:40%">To do so, you may define some <b>periodical transactions</b> in the <b>{0}</b> tab.<br>An easier way is to select a transaction, and <b>{1}</b> in the context-sensitive menu (right-click on the transaction).</html>
 Tip.4=<html>Think of using the right click\!<hr style\="width\:40%">A right click on a transaction gives you fast access to edition, duplication or deletion.</html>
 Tip.5=<html>The <b>{0}</b> tab allows you to make a lot of changes\:<hr style\="width\:40%">- Edit, create, suppress periodical transactions.<br>- Rename accounts, change initial balance, alert thresholds, payment modes. Manage check books<br>- Rename categories<br>- etc.</li></ul></html>
-Tip.6=<html>You can speed up your entries with keyboard shortcuts.<hr style\="width\:40%">When you edit a date, the <b>UP arrow</b> increases the date by one day, and the <b>DOWN arrow</b> decreases the date by one day.<br>Similarly, for number entries (for example, the number of checks in a checkbook), these arrows increase or decrease the number by one.</html>
+Tip.6=<html>You can speed up your entries with keyboard shortcuts.<hr style\="width\:40%">When you edit a date, the <b>UP arrow</b> increases the date by one day, and the <b>DOWN arrow</b> decreases the date by one day.<br>You can also type <b>+<i>x</i></b> in the field which means <i>x</i> days in the future.<br>++x for x months in the future, +++x for x years. Type <b>-x</b>, --x, ---x for x days, months, years in the past.<br><br>Similarly, for number entries (for example, the number of checks in a checkbook), arrow keys increase or decrease the number by one.</html>
 #-------- end of the welcome screen part --------
 
 #-------- AccountsSummary View --------
@@ -1334,5 +1336,6 @@ LinkEditor.url=Url\:
 LinkEditor.url.tooltip=Enter the destination URL in this field
 
 generic.recommended.with.parenthesis=(recommended)
+
 
 
