--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1156,6 +1156,7 @@ com.fathzer.soft.jclop.dropbox.ConnectionDialog.unexpectedError=An unexpected er
 com.fathzer.soft.jclop.dropbox.ConnectionDialog.error.processNotStarted=<html>You may click the <b>{0}</b> button first.</html>
 com.fathzer.soft.jclop.dropbox.ConnectionDialog.error.unableToLaunchBrowser.message=Sorry, an unexpected error occurred while launching the browser.
 com.fathzer.soft.jclop.dropbox.ConnectionDialog.error.unableToLaunchBrowser.title=Unable to launch browser
+com.fathzer.soft.jclop.dropbox.ConnectionDialog.code.title=Enter the code here\:
 
 com.fathzer.soft.jclop.dropbox.read.tabTooltip=Select this tab to read data from your Dropbox account
 com.fathzer.soft.jclop.dropbox.save.tabTooltip=Select this tab to save to your Dropbox account
