--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -1323,7 +1323,7 @@ messages.title=Messages
 messagesnoMessageAvailable=No unread message available
 
 LinkEditor.button.tooltip=Click this button to add or edit link
-LinkEditor.button.tooltip.disabled=This button is is disabled because you're not currently editing comment field
+LinkEditor.button.tooltip.disabled=This button is disabled because you're not currently editing comment field
 LinkEditor.dialog.title=Edit link
 LinkEditor.file=File
 LinkEditor.file.tooltip=Click this button to select a file as link destination
