Implementation of request #86

--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -606,6 +606,7 @@ BudgetPanel.sumLine.checkBox=Totals line
 BudgetPanel.sumLine.checkBox.tooltip=Check this box to add a total line to the table.
 BudgetPanel.sum=TOTAL
 BudgetPanel.average=AVERAGE
+BudgetPanel.exportAs=In format {0} (.{1})
 
 ErrorManager.message=An error occurred \!\n Current operation is aborted.
 ErrorManager.title=ALERT \!\!\!
@@ -1296,6 +1297,8 @@ ExportDialog.decimalSeparator.customized.toolTip=Select this option to specify a
 ExportDialog.decimalSeparator.customizedChar.toolTip=Enter the preferred separator
 ExportDialog.decimalSeparator.defaultSeparator=Default ({0})
 ExportDialog.decimalSeparator.defaultSeparator.toolTip=Select this option to use the default separator
+ExportDialog.formatMessage=<html>Select the format for export.</html>
+ExportDialog.formatMessage.tooltip=Select the format of the file you want to export
 ImportDialog.ignoreFirstLine=Ignore first line(s). Number of lines:
 ImportDialog.ignoreFirstLine.toolTip=If the first line(s) of the file is a header, check this box to ignore the header
 ImportDialog.lineNumber.toolTip=<html>This field contains the number of the line used to populate the <b>"{0}"</b> column above</html>
