--- a/pom.xml
+++ b/pom.xml
@@ -303,5 +303,15 @@
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.j2html</groupId>
+		    <artifactId>j2html</artifactId>
+		    <version>1.4.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.alexandriasoftware.swing</groupId>
+		    <artifactId>jsplitbutton</artifactId>
+		    <version>1.3.1</version>
+		</dependency>
 	</dependencies>
 </project>
