New specification revision for request #86

--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -585,10 +585,12 @@ CustomFilterPanel.error.noAccount=Please select one or more account
 CustomFilterPanel.error.noCategory=Please select one or more category
 CustomFilterPanel.error.noMode=Please select one or more mode
 
+ExportComponent.export=Export
+ExportComponent.export.toolTip=Exports this table as a text file
+ExportComponent.exportAs=In format {0} (.{1})
+
 BudgetPanel.title=Budget
 BudgetPanel.tooltip=Distribution of receipts and expenses of the month/year
-BudgetPanel.export=Export
-BudgetPanel.export.toolTip=Exports this table as a text file
 BudgetPanel.filter=Filter
 BudgetPanel.filter.tooltip=Narrows the filter to current selection
 BudgetPanel.perMonth=Month-wise allocation
@@ -606,7 +608,6 @@ BudgetPanel.sumLine.checkBox=Totals line
 BudgetPanel.sumLine.checkBox.tooltip=Check this box to add a total line to the table.
 BudgetPanel.sum=TOTAL
 BudgetPanel.average=AVERAGE
-BudgetPanel.exportAs=In format {0} (.{1})
 
 ErrorManager.message=An error occurred \!\n Current operation is aborted.
 ErrorManager.title=ALERT \!\!\!
