First draft implementation of feature request number 62

--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -665,6 +665,8 @@ checkbookDialog.book.short=Checkbook
 checkbookDialog.remaining.short=Number of check leaves remaining
 checkbookDialog.next.short=Next check
 checkbookDialog.New.tooltip=Creates a new checkbook
+checkbookDialog.alert=<html>Attention, for the selected booklet you only have <b>{0}</b> checks left\!\!\!</html>
+checkbookDialog.alert.tooltip=You see this warning because you are running out the checks on the selected checkbook
 #Checkbook edition dialog
 checkbookDialog.title.new=New checkbook
 checkbookDialog.title.edit=Edit checkbook
