Refactoring of the requests n.62

--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -447,6 +447,7 @@ AccountManager.deleteMessage.one=The only transaction it contains will also be d
 AccountManager.deleteMessage.title=Non-empty account deletion
 AccountManager.title=Accounts management
 AccountManager.toolTip=This tab allows you to manage your accounts
+AccountManager.toolTip.checkbookAlert=<html>{0}<br>You see this warning because one or more booklets are running out according to the minimum threshold you have set</html>
 #AccountManager.modesNumber.title=Number of payment modes
 #AccountManager.checkbooksNumber.title=Number of checkbooks
 AccountManager.alertThresholdLess.title=Alert if balance is less than
@@ -479,6 +480,7 @@ ModeManager.deleteMessage.confirm=Do you really want to delete this payment mode
 ModeManager.deleteMessage.title=Deletion of payment mode in use 
 AdministrationPlugIn.title=Administration
 AdministrationPlugIn.toolTip=Add, delete or edit accounts, categories etc. 
+AdministrationPlugIn.toolTip.checkbookAlert=<html>{0}<br>You see this warning because one or more booklets are running out according to the minimum threshold you have set</html>
 
 StatisticsPlugin.bar.debts=Expenses
 StatisticsPlugin.bar.empty=No transactions found through the current filter
@@ -698,15 +700,8 @@ checkbookAlertsPreferencesDialog.Value=Minimum threshold to be notified:
 checkbookAlertsPreferencesDialog.Value.tooltip=Define the threshold below which you would like to receive the alert
 checkbookAlertsPreferencesDialog.error.valueIsBlank=Disabled because the value of threshold is blank
 
-checkbookAlertsWidget.Title=Alert management
-checkbookAlertsWidget.Title.tooltip=Allows you to manage and view alerts raised from your low-end checkbooks
 checkbookAlertsWidget.openPreferencesDialog=Preferences
 checkbookAlertsWidget.openPreferencesDialog.tooltip=Allows you to set some preferences regarding the warnings raised by the program in the case of checkbooks running out
-checkbookAlertsWidget.openAlertTips=Notices
-checkbookAlertsWidget.openAlertTips.tooltip=View current alerts
-checkbookAlertsWidget.openAlertTips.tooltip.disabled=Disabled because there are no alerts at this time
-checkbookAlertsWidget.AlertTips.body=<html>Below are the notices relating to the booklets of the account \"{0}\":<br><ul>{1}</ul></html>
-checkbookAlertsWidget.AlertTips.body.item=<li>For the \"{0}\" checkbook you have {1} out of {2} checks left</li>
 
 # This dialog is opened when the file to save the data is already existing
 # Dialog message
