Start working on Marco's work on checkbook alerts

--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -688,6 +688,17 @@ checkbookDialog.finished.createNew=Create a new book
 checkbookDialog.finished.delete=Delete the checkbook
 checkbookDialog.finished.DeleteAndCreateNew=Delete it and create a new book
 
+checkbookAlertsPreferencesDialog.Title=Alert preferences management
+checkbookAlertsPreferencesDialog.Help=<html>Using this window you can choose if you want to be notified when one or more booklets are running out.<br>If this warning is enabled you will see the warning icon appear on the side on the <b>{0}</b> tab.</html>
+checkbookAlertsPreferencesDialog.State=Enable alerts:
+checkbookAlertsPreferencesDialog.State.tooltip=Enable or disable checking the amount of checks remaining
+checkbookAlertsPreferencesDialog.Value=Minimum threshold to be notified:
+checkbookAlertsPreferencesDialog.Value.tooltip=Define the threshold below which you would like to receive the alert
+checkbookAlertsPreferencesDialog.error.valueIsBlank=Disabled because the value of threshold is invalid
+
+checkbookAlertsWidget.openPreferencesDialog=Alert settings
+checkbookAlertsWidget.openPreferencesDialog.tooltip=Allows set your preferences regarding the warnings raised when checkbooks are running out
+
 # This dialog is opened when the file to save the data is already existing
 # Dialog message
 saveDialog.FileExist.message=File already exists. Would you like to overwrite it?
@@ -1298,7 +1309,7 @@ ExportDialog.decimalSeparator.customized.toolTip=Select this option to specify a
 ExportDialog.decimalSeparator.customizedChar.toolTip=Enter the preferred separator
 ExportDialog.decimalSeparator.defaultSeparator=Default ({0})
 ExportDialog.decimalSeparator.defaultSeparator.toolTip=Select this option to use the default separator
-ExportDialog.formatMessage=<html>Select the format for export.</html>
+ExportDialog.formatMessage=Select the format for export
 ExportDialog.formatMessage.tooltip=Select the format of the file you want to export
 ImportDialog.ignoreFirstLine=Ignore first line(s). Number of lines:
 ImportDialog.ignoreFirstLine.toolTip=If the first line(s) of the file is a header, check this box to ignore the header
