Removes html from tooltip res (less error prone for translator)

--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -479,7 +479,7 @@ ModeManager.deleteMessage.confirm=Do you really want to delete this payment mode
 ModeManager.deleteMessage.title=Deletion of payment mode in use 
 AdministrationPlugIn.title=Administration
 AdministrationPlugIn.toolTip=Add, delete or edit accounts, categories etc. 
-AdministrationPlugIn.toolTip.checkbookAlert=<html>{0}<br>Warning, one or more accounts are running out of checks</html>
+AdministrationPlugIn.toolTip.checkbookAlert=Warning, one or more accounts are running out of checks
 
 StatisticsPlugin.bar.debts=Expenses
 StatisticsPlugin.bar.empty=No transactions found through the current filter
